--- a/help.html
+++ b/help.html
@@ -13,15 +13,17 @@
                 <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
                 <li class="nav-item"><a class="nav-link" href="schedule.html">Train Schedule</a></li>
                 <li class="nav-item"><a class="nav-link" href="help.html">Help</a></li>
+                <li class="nav-item"><a class="nav-link" href="tips.html">Passenger Safety</a></li>
             </ul>
             <div class="d-flex">
                 <input class="form-control me-2" type="search" placeholder="search..." id="SearchBar">
-                <button class="btn btn-warning" onclick="SearchUp('SearchBar')">Search</button>
+                <button class="btn btn-warning" onclick="SearchUp('SearchBar')" id="SearchBtn">Search</button>
             </div>
         </div>
     </nav>
 
     <div class="fare-guide">Leave a Comment</div>
+    <p class="description">We value your feedback. Talk to us.</p>
     <br>
     <div class="container">
         <textarea class="form-control" placeholder="Type here..." id="comment"></textarea>
