--- a/schedule.html
+++ b/schedule.html
@@ -5,7 +5,7 @@
 
 </head>
 
-<body>
+<body id="Sched-html">
     <nav class="navbar navbar-expand-lg">
         <div class="container">
             <a class="navbar-brand" href="#"><img src="train.jpeg" alt="Logo" height="75"></a>
@@ -23,7 +23,7 @@
     </nav>
 
     <div class="fare-guide">Train Schedule</div>
-    <p class="description">The LRT train schedule generally remains consistent, with minimal deviations, unless unforeseen technical issues arise, leading to potential delays or adjustments.</p>
+    <p class="description" id="sched-desc">The LRT train schedule generally remains consistent, with minimal deviations, unless unforeseen technical issues arise, leading to potential delays or adjustments.</p>
     <br>
     <div class="container">
         <table class="table table-bordered text-center table-hover table-warning" >
