--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
-<body onload="ChangeCost()">
+<body onload="ChangeCost()" >
     <nav class="navbar navbar-expand-lg">
         <div class="container">
             <a class="navbar-brand" href="#"><img src="train.jpeg" alt="Logo" height="75"></a>
@@ -123,7 +123,7 @@
         </div>
     </div>
 
-    
+    <p class="Copyright">Made by Daradal and Cotioco | 9 - Topaz</p>
     
 
 </body>
