--- a/help.html
+++ b/help.html
@@ -1,3 +1,9 @@
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>help</title>
+</head>
 <head>
 	<script src="main.js"></script>
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
@@ -8,7 +14,7 @@
 <body>
     <nav class="navbar navbar-expand-lg">
         <div class="container">
-            <a class="navbar-brand" href="#"><img src="train.jpeg" alt="Logo" height="75"></a>
+            <a class="navbar-brand" href="#"><img src="train.png" alt="Logo" height="75"></a>
             <ul class="navbar-nav">
                 <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
                 <li class="nav-item"><a class="nav-link" href="schedule.html">Train Schedule</a></li>
@@ -43,3 +49,4 @@
 
 
 </body>
+</html>
