--- a/tips.html
+++ b/tips.html
@@ -9,7 +9,7 @@
 <body>
     <nav class="navbar navbar-expand-lg">
         <div class="container">
-            <a class="navbar-brand" href="#"><img src="train.jpeg" alt="Logo" height="75"></a>
+            <a class="navbar-brand" href="#"><img src="train.png" alt="Logo" height="75"></a>
             <ul class="navbar-nav">
                 <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
                 <li class="nav-item"><a class="nav-link" href="schedule.html">Train Schedule</a></li>
